tests/ui/nll/issue-69114-static-mut-ty.stderr
error[E0597]: `n` does not live long enough
  --> $DIR/issue-69114-static-mut-ty.rs:22:15
   |
LL |     let n = 42;
   |         - binding `n` declared here
LL |     unsafe {
LL |         BAR = &n;
   |         ------^^
   |         |     |
   |         |     borrowed value does not live long enough
   |         assignment requires that `n` is borrowed for `'static`
...
LL | }
   | - `n` dropped here while still borrowed

error[E0597]: `n` does not live long enough
  --> $DIR/issue-69114-static-mut-ty.rs:30:22
   |
LL |     let n = 42;
   |         - binding `n` declared here
LL |     unsafe {
LL |         BAR_ELIDED = &n;
   |         -------------^^
   |         |            |
   |         |            borrowed value does not live long enough
   |         assignment requires that `n` is borrowed for `'static`
...
LL | }
   | - `n` dropped here while still borrowed

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0597`.
